manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeselector-mutating-webhook
  namespace: nodeselector-mwh 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeselector-mutating-webhook
  template:
    metadata:
      labels:
        app: nodeselector-mutating-webhook
    spec:
      containers:
        - name: webhook
          image: artifactory.tecsysrd.cloud/tecsys-noc/nodeselector-mutating-webhook:v2-79c90fa2
          ports:
            - containerPort: 443
          volumeMounts:
            - name: tls-certs
              mountPath: /tls
              readOnly: true
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: tls-certs
          secret:
            secretName: webhook-tls
