manifests/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: nodeselector-mutating-webhook
  namespace: nodeselector-mwh
webhooks:
  - name: nodeselector-mutating.k8s.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["latest"]  # Only namespaces with this label will be affected
    clientConfig:
      service:
        name: nodeselector-mutating-webhook-svc
        namespace: nodeselector-mwh
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lVUDBqc3M1RFMyOEtMaHBFMVU3Rnp4ZGNIdG5jd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JUWFYwWVhScGJtZFhaV0pvYjI5clEwRXdIaGNOTWpReE1qQTBNVEkxT1RJMwpXaGNOTWpVeE1qQTBNVEkxT1RJM1dqQWNNUm93R0FZRFZRUUREQkZOZFhSaGRHbHVaMWRsWW1odmIydERRVENDCkFTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS2dHSnlrVUFaOHh1T0swU1JMR1pvcDMKWTZ3Vy81dGluQ0lXMmZ4K2R4aVo4OTVNVmhZWWUvR1BjczlQMnJlTVNhUXN1SmRGejdRTUNMdzE5aCs0THBGZgo2MUtkSUFXbWpL [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
    admissionReviewVersions: ["v1"]
    sideEffects: None
